--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1>test new</h1>
     <script src="./dist/main.js"></script>
 </body>
 </html>
