project details added

--- a/src/template.html
+++ b/src/template.html
@@ -2,11 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Sculpt Labs</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
+<link rel="mask-icon" href="./assets/img/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#001011">
+<meta name="theme-color" content="#fafafa">
 </head>
 <body>
-    <h1 class="bg-light">test new</h1>
-    <img src="./assets/img/amazon.svg" alt="">
+    <header><nav class="navbar navbar-expand-lg sticky-top">
+        <a class="navbar-brand" href="#"><img src="assets/img/sculpt-icon.svg" alt="" class="logo"><span>Sculpt Lab</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#about">About Us</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#contact">Contact Us</a>
+          </div>
+        </div>
+      </nav></header>
+      <main>
+          <section class="banner">
+              <div class="main-container"><h1>Welcome to Sculpt Lab</h1>
+                <a href="#contact" class="cta">Contact Us</a></div>
+                <div class="particlejs"  id="particles-js"></div>
+          </section>
+          <section class="about"id="about">
+              <h2 class="section-title">
+                  About Us
+              </h2>
+              <p class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio illo esse eius incidunt quasi ex consequuntur saepe fuga distinctio hic nobis amet, ea expedita iure tempore voluptates nostrum aperiam! Illo, vel sunt iure eveniet ab quibusdam odit quasi similique laborum possimus assumenda veritatis a pariatur mollitia voluptas qui corrupti quam eligendi exercitationem quia! Et odio animi odit ut est placeat dolorum illum natus quo unde, soluta impedit omnis tenetur, excepturi officia debitis nobis pariatur rem iste. Ratione aliquid rem sint quidem, temporibus velit voluptates quod nulla laborum veritatis laudantium assumenda, ad ex blanditiis neque optio voluptatem corporis dolorem reprehenderit perspiciatis.</p>
+          </section>
+      </main>
+      <footer></footer>
 </body>
 </html>
